agregando funcionalidades a editorial

--- a/Biblioteca/Biblioteca.Host/Scripts/app/editorial/editorial.template.html
+++ b/Biblioteca/Biblioteca.Host/Scripts/app/editorial/editorial.template.html
@@ -1,20 +1,29 @@
-﻿<form>
+﻿<form name="editorialForm" novalidate>
     <div class="form-group">
         <label for="editorialId">Id:</label>
         <input class="form-control" 
                id="editorialId" 
-               ng-model="editorialActual.id"
+               ng-model="editorialActual.Id"
                ng-disabled="true"/>
     </div>
     <div class="form-group">
         <label for="editorialNombre">Nombre:</label>
         <input class="form-control" 
-               nombre="editorialNombre" 
-               ng-model="editorialActual.nombre" />
+               id="editorialNombre"
+               name="editorialNombre" 
+               ng-model="editorialActual.Nombre" 
+               required
+               ng-minlength="3"
+               ng-maxlength="25"/>
+        <div ng-messages="editorialForm.editorialNombre.$error">
+            <div ng-message="required">El nombre es requerido</div>
+            <div ng-message="minlength">El nombre de la editorial debe de tener mas 3 de caracteres</div>
+            <div ng-message="maxlength">El nombre de la editorial debe tener menos de 25 carateres</div>
+        </div>
     </div>
     <div class="form-group">
-        <button class="btn btn-primary">Salvar</button>
-        <button class="btn btn-default">Cancelar</button>
+        <button ng-disabled="editorialForm.$invalid" ng-click ="salvarEditorial()" class="btn btn-primary">{{accionActual}}</button>
+        <button ng-click ="limpiar()" class="btn btn-default">Cancelar</button>
     </div>
 </form>
 <table class="table">
@@ -22,12 +31,16 @@
         <th>Id</th>
         <th>Nombre</th>
         <th></th>
+        <th></th>
     </tr>
     <tr ng-repeat="editorial in editoriales">
-        <td>{{editorial.id}}</td>
-        <td>{{editorial.nombre}}</td>
+        <td>{{editorial.Id}}</td>
+        <td>{{editorial.Nombre}}</td>
         <td>
-            <button class="btn btn-link">Editar</button>
+            <button ng-click="editar(editorial)" class="btn btn-link">Editar</button>
+        </td>
+        <td>
+            <button ng-click="eliminar(editorial)" class="btn btn-link">Eliminar</button>
         </td>
     </tr>
 </table>
