agregando administrador de libro

--- a/Biblioteca/Biblioteca.Host/Scripts/app/ngMenuBiblioteca/ngMenuBiblioteca.template.html
+++ b/Biblioteca/Biblioteca.Host/Scripts/app/ngMenuBiblioteca/ngMenuBiblioteca.template.html
@@ -8,4 +8,7 @@
     <div class="row">
         <a href="/#/editoriales">Administrar Editoriales</a>
     </div>
+    <div class="row">
+        <a href="/#/libros">Administrar Libros</a>
+    </div>
 </div>
